--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bootstrap": "^4.5.1",
     "moment": "^2.27.0",
+    "mongoose": "^5.9.27",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
