--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-manager-app",
   "productName": "ProManagerX",
   "version": "1.0.0",
+  "author": "tmkamal",
   "description": "Simple bug tracking application using electron",
   "license": "MIT",
   "engines": {
@@ -18,7 +19,8 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js --mode development",
     "build": "cross-env NODE_ENV=production webpack --config webpack.build.config.js --mode production",
     "package": "npm run build",
-    "postpackage": "electron-packager ./ --out=./release-builds"
+    "postpackage": "electron-packager ./ --platform win32 --out=./release-builds",
+    "dist":"electron-builder"
   },
   "dependencies": {
     "bootstrap": "^4.5.1",
@@ -38,6 +40,7 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "electron": "^9.0.0",
+    "electron-builder": "^22.8.0",
     "electron-devtools-installer": "^3.0.0",
     "electron-packager": "^14.2.1",
     "file-loader": "^6.0.0",
@@ -47,5 +50,14 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "build":{
+    "appId":"com.tmkamal.app",
+    "target":"NSIS",
+    "directories": { "output": "release/" },
+    "nsis":{
+      "allowToChangeInstallationDirectory":true,
+      "oneClick":false
+    }
   }
 }
